# eta-widget-slack

./: 15-eta-widget-slack-position.js  CMakeLists.txt  Messages.sh  clock.cpp  clock.h  fileio.cpp  fileio.h  networkmanager.cpp  networkmanager.h  slack.cpp  slack.h
debian/: changelog  control  copyright  eta-flash-installer.install
package/: metadata.desktop
package/contents/ui/: main.qml
usr/share/doc/adobe-flash/: copyright
